Fix content title line spacing.

--- a/app/stylesheets/_base.sass
+++ b/app/stylesheets/_base.sass
@@ -134,7 +134,6 @@ h1.navtitle
   font-family: Trebuchet MS, Helvetica, sans-serif
 
 #main .content .secondary-navigation .navtitle
-  line-height: 14px
   margin-top: 4px
 
 #user-navigation ul li a
